fea-rs/test-data/compile-tests/mini-latin/bad/aalt_reference_missing_feature.fea
feature aalt {
    feature nope;
} aalt;
